...
    <string name="mark_read">Mark as Read</string>
    <string name="mark_unread">Mark as Unread</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="cancel">Cancel</string>
    <string name="no_chats">No Chats</string>
    <string name="no_chats_detail">Start a new chat to send a message.</string>
...
    <string name="read_aloud">Read Aloud</string>
    <string name="stop_reading">Stop Reading</string>
    <string name="video_playback_position">Playback Position</string>
    <string name="video_playback_speed">Playback Speed</string>
    <string name="show_message_actions">Show Message Actions</string>
    <string name="message_actions">Message Actions</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="select">Select</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="retry_send">Retry Send</string>
    <string name="more_reactions">More Reactions</string>
    <string name="reactions">Reactions</string>
    <plurals name="reaction_count">
        <item quantity="one">%1$s, %2$d reaction</item>
        <item quantity="other">%1$s, %2$d reactions</item>
...
